# geany-git-ui

./: .gitignore  Makefile.am  README  TODO  autogen.sh  configure.ac  geany-git-ui-test.c
compat/: ggu-glib-compat.h  ggu-gtk-compat.h
git-lib/: ggu-git-blame-entry.c  ggu-git-blame-entry.h  ggu-git-branch.c  ggu-git-branch.h  ggu-git-files-changed-entry.c  ggu-git-files-changed-entry.h  ggu-git-log-entry.c  ggu-git-log-entry.h  ggu-git-log.c  ggu-git-log.h  ggu-git-show.c  ggu-git-show.h  ggu-git-utils.c  ggu-git-utils.h  ggu-git-version.c  ggu-git-version.h  ggu-git-wrapper-branch-list.c  ggu-git-wrapper-branch-list.h  ggu-git-wrapper-log.c  ggu-git-wrapper-log.h  ggu-git-wrapper-private.c  ggu-git-wrapper-private.h  ggu-git.c  ggu-git.h  git-utils.c  git-utils.h  git-wrapper-branch-list.c  git-wrapper-branch-list.h  git-wrapper-log.c  git-wrapper-log.h  git-wrapper-private.c  git-wrapper-private.h
src/: ggu-auto-link-label.c  ggu-auto-link-label.h  ggu-fade-out-widget.c  ggu-fade-out-widget.h  ggu-files-changed-store.c  ggu-files-changed-store.h  ggu-files-changed-view.c  ggu-files-changed-view.h  ggu-history-store.c  ggu-history-store.h  ggu-history-view.c  ggu-history-view.h  ggu-marshal.list  ggu-message-box.c  ggu-message-box.h  ggu-message-info.c  ggu-message-info.h  ggu-panel.c  ggu-panel.h  ggu-plugin.c  ggu-plugin.h  ggu-tree-view.c  ggu-tree-view.h  ggu-utils.h  ggu-wrap-label.c  ggu-wrap-label.h
